2010-09-19  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  adj_value_changed_by_myself is set to 1 in line_scrolled_out(),
	  otherwise bidi text is not correctly drawn.
	  (Thanks to Usama Akkad)
	
	* tool/mlconfig/Makefile.in
	  -lX11 is added to LIBS2 variable.
	  (Thanks to Hicham Haouari)

2010-09-18  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  pango_font_description_to_string() is used in vte_terminal_set_font().
	
2010-09-18  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  Font and color configuration protocol updates font setting immediately.
	  Pressing button3 opens menu whose items are still just "Copy" (which copys
	  selected text to clipboard) and "Paste".

	* vtetypebuitins.c: Added

2010-09-16  Araki Ken  <arakiken@users.sf.net>

	* gtk/marshal.[ch], vte.c: Added for vte compatible api.

	* man/mlterm.1, doc/ja/README.ja: updated

	* "default" value which makes mlterm follow default setting
	  of anti-alias is added to "use_anti_alias" option.
	  If -A option is not specified in startup, the value of
	  "use_anti_alias" is "default" by default.
	  If you want to disable anti alias explicitly, specify
	  "use_anti_alias=false" or -A=false.

	* scim/im_scim_mod_if.c, im_scim.cpp: code clean up.

	* ml_color.c: Fixed a bug of shifting 16 bit color to 8 bit
	  in ml_color_parse_rgb_name(). (">> 4" => ">> 8")

	* ml_vt100_parser.c: Check of VTE_CJK_WIDTH environment is added
	  (but disabled for now).

	* x_screen.[ch]: x_screen_get_config is removed (not public).

2010-09-01  Araki Ken  <arakiken@users.sf.net>

	* x_im_candidate_screen.c, x_im_status_screen.c: Fixed a bug of argument of
	  x_display_show_root().
	  (SF Bug #3051467, Thanks to Khaled Hosny)

	* man/mlterm.1, doc/ja/README.ja: parent_window option is added.

	* gtk/Makefile: Renamed to Makefile.in
	
	* gtk/mlvte-in.c: Added. It wraps xwindow/x_screen.c.
	
	* gtk/mlvte.c: Renamed to mlvte-ex.c

2010-08-16  Araki Ken  <arakiken@users.sf.net>
